# vbook

./: Cargo.toml
src/: lib.rs  response.rs
src/controller/: book.rs  demand.rs
src/database/: db.rs
src/model/: book.rs  demand.rs  mod.rs
src/routes/: routes.rs
src/service/: book.rs  demand.rs
