[package]
name = "vbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "voolibowlib"
path ="src/lib.rs"

[dependencies]
actix-web = "3.3.3"
actix-multipart = "0.3.0"
serde = "1.0.136"
serde_json = "1.0.79"
futures-util = "0.3.21"
chrono = "0.4.19"
uuid = { version = "0.8", features = ["serde", "v4"] }
mongodb = {version="2.1.0", default-features = false,  features = ["sync"] }
bson = "2.1.0"